<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HouseUnderControl</string>
    <string name="action_settings">Settings</string>
    <string name="configuracion">Nueva Configuracion</string>
    <string name="monitoreo">Monitoreo de Casa</string>
    <string name="ver_configuracion">Ver Configuraciones</string>
    <string name="title_activity_activity_row">activity_row</string>
    <string name="title_activity_activity_config">Configuración de Casa</string>
    <string name="title_activity_ver_configuracion">Ver Casa</string>
    <string name="nombre">Nombre:</string>
    <string name="cantidad">Cantidad de Cuartos:</string>
    <string name="guardar">Guardar Configuracion</string>
    <string name="verCasas">Ver Lista de Casas</string>
    <string name="verAlarmas">Ver Lista de Alarmas</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_monitoreo">Monitoreo</string>
    <string name="title_activity_map">Localizar Casa</string>
    <string name="title_activity_ver_todos">Ver Configuraciones</string>
    <string name="title_activity_ver_alarmas">Ver Alarmas</string>
    <string name="title_activity_monitoreo__servidor">monitoreo_Servidor</string>
    <string name="encenderAlarma">Encender Alarma</string>
    <string name="apagarAlarma">Apagar Alarma</string>
    <string name="encenderFoco">Encender Foco</string>
    <string name="apagarFoco">Apagar Foco</string>
    <string name="selMonitoreo">Selecciona una Casa para Monitorear</string>
    <string name="selBusqueda">Selecciona una Casa para  Buscar</string>
    <string name="title_activity_map_todos">Localizar Casa</string>
    <string name="title_activity_monitoreo_todos">Monitorear Casa</string>
    <string name="temp">Temperatura Actual:</string>
    <string name="luz">Intensidad de Luz:</string>
    <string name="fecha">Fecha  Activación:</string>
    <string name="statAlarma">Estatus de Alarma:</string>
    <string name="statLuz">Estatus de Foco:</string>
    <string name="title_activity_opciones">OpcionesActivity</string>
    <string name="title_activity_edit_configuration">Editar Configuración</string>
    <string name="edit">Editar Configuración</string>
    <string name="title_activity_ver_informacion_alarma">Ver Información de Alarma</string>

</resources>
