
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1"
    android:id="@+id/">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_x="71dp"
        android:layout_y="34dp"
        android:layout_marginLeft="60dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuracion"
        android:id="@+id/configBtn"
        android:layout_x="11dp"
        android:layout_y="152dp"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:text="@string/monitoreo"
        android:id="@+id/monitoreoBtn"
        android:layout_x="13dp"
        android:layout_y="276dp"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_configuracion"
        android:id="@+id/verconfigBtn"
        android:layout_x="26dp"
        android:layout_y="230dp"
        android:layout_marginTop="50dp"/>
</LinearLayout>



