<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nombre"
            android:id="@+id/nombreTV"
            android:layout_x="30dp"
            android:layout_y="15dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/nombreValueET"
            android:layout_x="30dp"
            android:layout_y="40dp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cantidad"
            android:id="@+id/cantCuartosTV"
            android:layout_x="30dp"
            android:layout_y="90dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/cantCuartosValueTV"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <ListView
        android:layout_width="220dp"
        android:layout_height="94dp"
        android:id="@+id/cuartosLV"
        android:layout_x="95dp"
        android:layout_y="118dp"/>

    <ImageView
        android:layout_width="244dp"
        android:layout_height="244dp"
        android:id="@+id/casaIV"
        android:layout_x="61dp"
        android:layout_y="215dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/botonGuardar"
        android:layout_x="97dp"
        android:layout_y="458dp"
        android:layout_marginLeft="75dp"/>

</LinearLayout>